data storage class restyled.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -47,7 +47,7 @@ am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_raspisator_OBJECTS = main.$(OBJEXT) person.$(OBJEXT) \
 	event.$(OBJEXT) group.$(OBJEXT) calendar.$(OBJEXT) \
-	userinterface.$(OBJEXT)
+	userinterface.$(OBJEXT) data_storage.$(OBJEXT)
 raspisator_OBJECTS = $(am_raspisator_OBJECTS)
 raspisator_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
@@ -152,7 +152,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CPP_FLAGS = -I$(srcdir)
-raspisator_SOURCES = main.cpp person.cpp person.h event.cpp event.h group.cpp group.h calendar.cpp calendar.h userinterface.cpp userinterface.h group_content.h
+raspisator_SOURCES = main.cpp person.cpp person.h event.cpp event.h group.cpp group.h calendar.cpp calendar.h userinterface.cpp userinterface.h group_content.h data_storage.cpp
 all: all-am
 
 .SUFFIXES:
@@ -235,6 +235,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/calendar.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/data_storage.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/event.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/group.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
