--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,3 @@
 AM_CPP_FLAGS=-I$(srcdir)
 bin_PROGRAMS=raspisator
-raspisator_SOURCES=main.cpp person.cpp person.h event.cpp event.h group.cpp group.h calendar.cpp calendar.h userinterface.cpp userinterface.h group_content.h
+raspisator_SOURCES=main.cpp person.cpp person.h event.cpp event.h group.cpp group.h calendar.cpp calendar.h userinterface.cpp userinterface.h group_content.h data_storage.cpp
