--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,3 @@
 AM_CPP_FLAGS=-I$(srcdir)
 bin_PROGRAMS=raspisator
-raspisator_SOURCES=main.cpp person.cpp event.cpp group.cpp calendar.cpp userinterface.cpp data_storage.cpp
+raspisator_SOURCES=main.cpp person.cpp event.cpp group.cpp calendar.cpp userinterface.cpp data_storage.cpp commands.cpp
