all methods of DataStorage are basicaly typed.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -47,7 +47,8 @@ am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_raspisator_OBJECTS = main.$(OBJEXT) person.$(OBJEXT) \
 	event.$(OBJEXT) group.$(OBJEXT) calendar.$(OBJEXT) \
-	userinterface.$(OBJEXT) data_storage.$(OBJEXT) \
+	userinterface.$(OBJEXT) table_data_storage.$(OBJEXT) \
+	data_storage.$(OBJEXT) file_storage.$(OBJEXT) \
 	commands.$(OBJEXT) command_exit.$(OBJEXT) \
 	command_all.$(OBJEXT) command_print.$(OBJEXT) \
 	command_help.$(OBJEXT) command_clone.$(OBJEXT) \
@@ -154,7 +155,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CPP_FLAGS = -I$(srcdir)
-raspisator_SOURCES = main.cpp person.cpp event.cpp group.cpp calendar.cpp userinterface.cpp data_storage.cpp commands.cpp command_exit.cpp command_all.cpp command_print.cpp command_help.cpp command_clone.cpp command_merge.cpp command_exclude.cpp command_include.cpp command_add.cpp command_link.cpp queue.cpp
+raspisator_SOURCES = main.cpp person.cpp event.cpp group.cpp calendar.cpp userinterface.cpp table_data_storage.cpp data_storage.cpp file_storage.cpp commands.cpp command_exit.cpp command_all.cpp command_print.cpp command_help.cpp command_clone.cpp command_merge.cpp command_exclude.cpp command_include.cpp command_add.cpp command_link.cpp queue.cpp
 all: all-am
 
 .SUFFIXES:
@@ -250,10 +251,12 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/commands.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/data_storage.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/event.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/file_storage.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/group.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/person.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/queue.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/table_data_storage.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/userinterface.Po@am__quote@
 
 .cpp.o:
