Abstract part of Storage module created (see class diagram in uml model).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,3 +7,5 @@ add_executable (raspisator calendar.cpp command_add.cpp command_all.cpp
     command_merge.cpp command_print.cpp commands.cpp command_select.cpp
     data_storage.cpp event.cpp event_template.cpp file_storage.cpp group.cpp
     main.cpp person.cpp queue.cpp table_data_storage.cpp userinterface.cpp)
+
+add_subdirectory (storage)
