--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
-cmake_minimum_required (VERSION 2.8)
+cmake_minimum_required (VERSION 2.8.3)
 project (UniSched)
 
 add_definitions (-std=c++0x)
 
+set(PROJECT_BINARY_DIR ${CMAKE_CURRENT_LIST_DIR}/bin)
+
+enable_testing()
 add_subdirectory (src)
