Core namespace ready. (see #14).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,7 @@ cmake_minimum_required (VERSION 2.8)
 project (UniSched)
 
 add_definitions (-std=c++0x)
+include_directories ("${PROJECT_SOURCE_DIR}/src/include")
 
 add_subdirectory (src)
+
