--- a/src/storage/CMakeLists.txt
+++ b/src/storage/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_executable (test test.cpp storableobject.cpp abstractstorage.cpp)
+add_library (storage storableobject.cpp abstractstorage.cpp)
