--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 
+add_subdirectory (storage)
+add_subdirectory (core)
+
 add_executable (raspisator calendar.cpp command_add.cpp command_all.cpp
     command_clone.cpp command_delete.cpp command_dequeue.cpp
     command_enqueue.cpp command_exclude.cpp command_exit.cpp
@@ -7,5 +10,6 @@ add_executable (raspisator calendar.cpp command_add.cpp command_all.cpp
     command_merge.cpp command_print.cpp commands.cpp command_select.cpp
     data_storage.cpp event.cpp event_template.cpp file_storage.cpp group.cpp
     main.cpp person.cpp queue.cpp table_data_storage.cpp userinterface.cpp)
+target_link_libraries (raspisator core storage)
 
-add_subdirectory (storage)
+
