--- a/src/userinterface/CMakeLists.txt
+++ b/src/userinterface/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required (VERSION 2.8)
 
-add_library (userinterface usersobject.cpp)
+add_library (userinterface usersobject.cpp abstractuserinterface.cpp)
 
