--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,8 @@ add_executable (raspisator calendar.cpp command_add.cpp command_all.cpp
     command_generate.cpp command_help.cpp command_include.cpp command_link.cpp
     command_merge.cpp command_print.cpp commands.cpp command_select.cpp
     data_storage.cpp event.cpp event_template.cpp file_storage.cpp group.cpp
-    main.cpp person.cpp queue.cpp table_data_storage.cpp userinterface.cpp)
+    main.cpp person.cpp queue.cpp table_data_storage.cpp userinterface.cpp
+    backend.cpp)
 
 target_link_libraries (raspisator core storage ui)
 
