Old stupid code is removed. Some bugs in backends subsystem fixed.

--- a/src/backends/storage/CMakeLists.txt
+++ b/src/backends/storage/CMakeLists.txt
@@ -7,7 +7,7 @@ endif (NOT DEFINED WITH_SQLITE)
 if (WITH_SQLITE)
     check_include_file_cxx ("sqlite3.h" HAVE_SQLITE)
     if (HAVE_SQLITE)
-        add_library (sqlitestorage sqlite.cpp)
+        add_library (sqlitestorage SHARED sqlite.cpp)
         target_link_libraries (sqlitestorage sqlite3)
     else(HAVE_SQLITE)
         message (FAIL_ERROR "sqlite3.h not found on your system, but sqlite backend build requested.")
