Some fixes in the cmake configuration is.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 2.8.3)
-project (UniSched)
+project (UniSched CXX)
 
 add_definitions (-std=c++0x)
 
@@ -10,5 +10,8 @@ include_directories ("${PROJECT_SOURCE_DIR}/src/include")
 set(PROJECT_BINARY_DIR ${CMAKE_CURRENT_LIST_DIR}/bin)
 
 enable_testing()
+
+option(WITH_SQLITE "Build with SQLite support." Y)
+
 add_subdirectory (src)
 
