Storage::AbstractStorage and Storage::StorableObject are completely moved to Core::Manager and Core::ManagersObject. Option WITH_SQLITE default is set to N. Test architecture_with_backends must be fixed.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_subdirectory (storage)
+#add_subdirectory (storage)
 add_subdirectory (ui)
 add_subdirectory (core)
 add_subdirectory (backends)
@@ -11,7 +11,7 @@ add_library (backend SHARED backend.cpp)
 
 add_executable (raspisator main.cpp)
 
-target_link_libraries (raspisator backend core storage ui)
+target_link_libraries (raspisator backend core ui)
 if (HAVE_SQLITE)
     target_link_libraries (raspisator sqlitestorage)
 endif (HAVE_SQLITE)
