--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_library (core person.cpp abstractgroup.cpp group.cpp event.cpp)
+add_library (core person.cpp abstractgroup.cpp group.cpp event.cpp manager.cpp
+             managersobject.cpp)
 
-target_link_libraries (core storage)
+target_link_libraries (core)
 
