Core now linked with yaml-cpp

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -3,5 +3,5 @@ cmake_minimum_required(VERSION 2.8)
 add_library (core person.cpp abstractgroup.cpp group.cpp event.cpp manager.cpp
              managersobject.cpp)
 
-target_link_libraries (core)
+target_link_libraries (core yaml-cpp)
 
