--- a/src/modules/storage/CMakeLists.txt
+++ b/src/modules/storage/CMakeLists.txt
@@ -6,6 +6,6 @@ if (WITH_SQLITE)
         add_library (sqlitestorage SHARED sqlite.cpp)
         target_link_libraries (sqlitestorage sqlite3)
     else(HAVE_SQLITE)
-        message (FAIL_ERROR "sqlite3.h not found on your system, but sqlite backend build requested.")
+        message (FAIL_ERROR "sqlite3.h not found on your system, but sqlite module build requested.")
     endif (HAVE_SQLITE)
 endif (WITH_SQLITE)
