--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -3,13 +3,13 @@ cmake_minimum_required (VERSION 2.8)
 ## Next test commented because they do not builds and need to rewrite.
 
 #add_executable (model_classes_are_real model_classes_are_real.cpp)
-#target_link_libraries (model_classes_are_real backend core ui)
+#target_link_libraries (model_classes_are_real module core ui)
 #add_test (test_model_classes_are_real model_classes_are_real)
 
-#add_executable (architecture_with_backends architecture_with_backends.cpp)
-#target_link_libraries (architecture_with_backends backend core ui)
+#add_executable (architecture_with_modules architecture_with_modules.cpp)
+#target_link_libraries (architecture_with_modules module core ui)
 #if (HAVE_SQLITE)
-#    target_link_libraries (architecture_with_backends sqlitestorage)
+#    target_link_libraries (architecture_with_modules sqlitestorage)
 #endif (HAVE_SQLITE)
-#add_test (test_arcitecture_with_backends architecture_with_backends)
+#add_test (test_arcitecture_with_modules architecture_with_modules)
 
