--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
 
-#add_subdirectory (storage)
-add_subdirectory (ui)
 add_subdirectory (core)
 add_subdirectory (modules)
 
@@ -11,7 +9,7 @@ add_library (module SHARED module.cpp)
 
 add_executable (raspisator main.cpp)
 
-target_link_libraries (raspisator module core ui)
+target_link_libraries (raspisator module core)
 if (HAVE_SQLITE)
     target_link_libraries (raspisator sqlitestorage)
 endif (HAVE_SQLITE)
