--- a/src/modules/ui/CMakeLists.txt
+++ b/src/modules/ui/CMakeLists.txt
@@ -4,3 +4,8 @@ if (WITH_DUMMYUI)
     add_library (dummyui SHARED dummy.cpp)
     target_link_libraries (dummyui)
 endif (WITH_DUMMYUI)
+
+if (WITH_CLI)
+    add_library (cli SHARED cli.cpp)
+    target_link_libraries (cli)
+endif (WITH_CLI)
