--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,4 +13,8 @@ target_link_libraries (raspisator module core)
 if (HAVE_SQLITE)
     target_link_libraries (raspisator sqlitestorage)
 endif (HAVE_SQLITE)
+if (WITH_DUMMYUI)
+    target_link_libraries (raspisator dummyui)
+    add_test (dummyui-test raspisator --iface DummyUI)
+endif (WITH_DUMMYUI)
 
