--- a/src/modules/ui/CMakeLists.txt
+++ b/src/modules/ui/CMakeLists.txt
@@ -8,7 +8,7 @@ endif (WITH_DUMMYUI)
 if (WITH_CLI)
     if (READLINE_FOUND)
         add_library (cli SHARED cli.cpp Readline.cpp)
-        target_link_libraries (cli readline)
+        target_link_libraries (cli readline ${Boost_LIBRARIES})
     else (READLINE_FOUND)
         message (FAIL_ERROR " readline not found, but cli build requested.")
     endif (READLINE_FOUND)
