--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_library (core SHARED person.cpp abstractgroup.cpp group.cpp event.cpp object.cpp
-                abstractui.cpp module.cpp)
+add_library (core SHARED person.cpp abstractgroup.cpp group.cpp event.cpp object.cpp abstractui.cpp module.cpp)
 
-target_link_libraries (core yaml-cpp ${Boost_LIBRARIES})
-
+if (YAML_CPP STREQUAL YAML_CPP-NOTFOUND)
+    message (FATAL_ERROR "Could not find yaml-cpp. Minimun version reqiured: 0.5.0")
+else (YAML_CPP STREQUAL YAML_CPP-NOTFOUND)
+    message ("-- Found Yaml-cpp: " ${YAML_CPP})
+    target_link_libraries (core yaml-cpp ${Boost_LIBRARIES})
+endif (YAML_CPP STREQUAL YAML_CPP-NOTFOUND)
