вынес readline в модуль для CLI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,9 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")
 option(WITH_SQLITE "Build with SQLite support." N)
 option(WITH_DUMMYUI "Build with DummyUI support." Y)
 option(WITH_CLI "Build with CLI support." N)
-option(WITH_YAML "Build with YAML support." Y)
+option(WITH_YAML "Build with YAML support." N)
 
 find_package (Boost REQUIRED)
-
-if (WITH_CLI)
-    find_package (Readline REQUIRED)
-endif (WITH_CLI)
 
 if (WITH_YAML)
     add_definitions(-DWITH_YAML)
