CMake options added. The correct work of AbstractUI::dump() is checked for simple fields.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,20 +1,21 @@
 cmake_minimum_required (VERSION 2.8)
 
-add_executable (tester tester.cpp)
-target_link_libraries (tester core)
+if (WITH_TESTS_CORE)
+    add_executable (tester tester.cpp)
+    target_link_libraries (tester core)
 
-add_library (create_person SHARED create_person.cpp)
-add_test (create_person_test tester --iface TESTINGUI_CREATE_PERSON)
+    add_library (create_person SHARED create_person.cpp)
+    add_test (create_person_test tester --iface TESTINGUI_CREATE_PERSON)
 
-add_library (create_group SHARED create_group.cpp)
-add_test (create_group_test tester --iface TESTINGUI_CREATE_GROUP)
+    add_library (create_group SHARED create_group.cpp)
+    add_test (create_group_test tester --iface TESTINGUI_CREATE_GROUP)
 
-add_library (create_event SHARED create_event.cpp)
-add_test (create_event_test tester --iface TESTINGUI_CREATE_EVENT)
+    add_library (create_event SHARED create_event.cpp)
+    add_test (create_event_test tester --iface TESTINGUI_CREATE_EVENT)
 
-add_library (set_defined_field_right SHARED set_defined_field_right.cpp)
-add_test (set_defined_field_right_test tester --iface TESTINGUI_SET_DEFINED_FIELD_RIGHT)
+    add_library (set_defined_field_right SHARED set_defined_field_right.cpp)
+    add_test (set_defined_field_right_test tester --iface TESTINGUI_SET_DEFINED_FIELD_RIGHT)
 
-add_library (set_defined_field_wrong SHARED set_defined_field_wrong.cpp)
-add_test (set_defined_field_wrong_test tester --iface TESTINGUI_SET_DEFINED_FIELD_WRONG)
-
+    add_library (set_defined_field_wrong SHARED set_defined_field_wrong.cpp)
+    add_test (set_defined_field_wrong_test tester --iface TESTINGUI_SET_DEFINED_FIELD_WRONG)
+endif (WITH_TESTS_CORE)
