create_person test is added.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,15 +1,8 @@
 cmake_minimum_required (VERSION 2.8)
 
-## Next test commented because they do not builds and need to rewrite.
+add_executable (tester tester.cpp)
+target_link_libraries (tester core)
 
-#add_executable (model_classes_are_real model_classes_are_real.cpp)
-#target_link_libraries (model_classes_are_real module core ui)
-#add_test (test_model_classes_are_real model_classes_are_real)
-
-#add_executable (architecture_with_modules architecture_with_modules.cpp)
-#target_link_libraries (architecture_with_modules module core ui)
-#if (HAVE_SQLITE)
-#    target_link_libraries (architecture_with_modules sqlitestorage)
-#endif (HAVE_SQLITE)
-#add_test (test_arcitecture_with_modules architecture_with_modules)
+add_library (create_person SHARED create_person.cpp)
+add_test (create_person_test tester --iface TESTINGUI_CREATE_PERSON)
 
