Абсолютный путь к базе ямла из конфигов CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ option(WITH_SQLITE "Build with SQLite support." N)
 option(WITH_DUMMYUI "Build with DummyUI support." Y)
 option(WITH_CLI "Build with CLI support." Y)
 option(WITH_YAML "Build with YAML support." Y)
-option(WITH_TESTS_CXX11 "Check if the compiler handles the new stuff right." Y)
-option(WITH_TESTS_CORE "Build with Core tests." Y)
+option(WITH_TESTS_CXX11 "Check if the compiler handles the C++11 stuff right." Y)
+option(WITH_TESTS_CORE "Build with Core tests." N)
 
 if (WITH_TESTS_CXX11)
     include (cmake/c++11/CheckCXX11Features.cmake)
@@ -15,6 +15,8 @@ endif (WITH_TESTS_CXX11)
 add_definitions (-std=c++0x)
 
 include (CheckIncludeFileCXX)
+
+configure_file(src/modules/ui/paths.hpp.in ${PROJECT_SOURCE_DIR}/src/modules/ui/paths.hpp)
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")
 
