Yaml parser moved away from Object classes implementation headers. Some bugs in DummyUI fixed.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library (core SHARED person.cpp abstractgroup.cpp group.cpp event.cpp
 target_link_libraries (core dl ${Boost_LIBRARIES})
 
 if (WITH_YAML)
-    target_link_libraries (core yaml-cpp)
+    add_library (yaml yaml.cpp)
+    target_link_libraries (core yaml yaml-cpp)
 endif (WITH_YAML)
 
