без джема но со змеями

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ endif ("${PROJECT_BINARY_DIR}" STREQUAL "${PROJECT_SOURCE_DIR}")
 option(WITH_SQLITE "Build with SQLite support." N)
 option(WITH_DUMMYUI "Build with DummyUI support." Y)
 option(WITH_CLI "Build with CLI support." Y)
+option(WITH_EXT_PYTHON_CLI "Экспериментальные питоновские биндинги к CLI. (лучше просто пройди мимо)" N)
 option(WITH_YAML "Build with YAML support." Y)
 option(WITH_TESTS_CXX11 "Check if the compiler handles the C++11 stuff right." Y)
 option(WITH_TESTS_CORE "Build with Core tests." N)
@@ -34,6 +35,10 @@ endif (WITH_YAML)
 if (WITH_TESTS_CORE)
    add_definitions(-DWITH_TESTS_CORE)
 endif (WITH_TESTS_CORE)
+
+if (WITH_EXT_PYTHON_CLI)
+    add_definitions(-DWITH_EXT_PYTHON_CLI)
+endif(WITH_EXT_PYTHON_CLI)
 
 include_directories ("${Boost_INCLUDE_DIRS}")
 include_directories ("${PROJECT_SOURCE_DIR}/src/include")
