--- a/src/modules/ui/CMakeLists.txt
+++ b/src/modules/ui/CMakeLists.txt
@@ -17,22 +17,19 @@ if (WITH_CLI)
 
 endif (WITH_CLI)
 
-if (WITH_GTK)
-    SET(module_name gtkui)
-    SET(interface_files gtkui.i)
-    SET(src_files gtkui.cpp gtkui.hpp SReadline.h)
-
-    FIND_PACKAGE(SWIG REQUIRED)
-    INCLUDE(${SWIG_USE_FILE})
-
-    FIND_PACKAGE(PythonLibs)
-    INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
-    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
-
-    SET(CMAKE_SWIG_FLAGS "")
-
-    SET_SOURCE_FILES_PROPERTIES(cli.i PROPERTIES CPLUSPLUS ON)
-    SET_SOURCE_FILES_PROPERTIES(cli.i PROPERTIES SWIG_FLAGS "-includeall")
-    SWIG_ADD_MODULE(${module_name} python ${interface_files} ${src_files})
-    SWIG_LINK_LIBRARIES(cli ${PYTHON_LIBRARIES})
-ENDIF(WITH_GTK)
+if (WITH_EXT_PYTHON_CLI)
+    SET(CLI_PY_LIB unisched_cli)
+    MESSAGE("  *============================================*")
+    MESSAGE(" *             INTRUDER ALERT!!                 *")
+    MESSAGE("*                                                *")
+    MESSAGE("* Выбрана опция сборки python2-биндингов для CLI *")
+    MESSAGE("*  Пока ничего не работает, не надо сюда лезть.  *")
+    MESSAGE("*        (лучше просто пройди мимо)              *")
+    MESSAGE(" *                                              *")
+    MESSAGE("  *============================================*")
+    CONFIGURE_FILE(cli_py_names.hpp.in ${PROJECT_SOURCE_DIR}/src/include/cli_py_names.hpp)
+    LINK_LIBRARIES(boost_python)
+    INCLUDE_DIRECTORIES("/usr/include/python2.7")
+    LINK_DIRECTORIES("/usr/lib/python2.7")
+    ADD_LIBRARY(${CLI_PY_LIB} SHARED cli_py.cpp)
+endif(WITH_EXT_PYTHON_CLI)
