биндинги зависят от core

--- a/src/modules/ui/CMakeLists.txt
+++ b/src/modules/ui/CMakeLists.txt
@@ -32,4 +32,5 @@ if (WITH_EXT_PYTHON_CLI)
     INCLUDE_DIRECTORIES("/usr/include/python2.7")
     LINK_DIRECTORIES("/usr/lib/python2.7")
     ADD_LIBRARY(${CLI_PY_LIB} SHARED cli_py.cpp)
+    target_link_libraries(${CLI_PY_LIB} core dummyui)
 endif(WITH_EXT_PYTHON_CLI)
