Test "set undefined field right" is added.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -18,4 +18,7 @@ if (WITH_TESTS_CORE)
 
     add_library (set_defined_field_wrong SHARED set_defined_field_wrong.cpp)
     add_test (set_defined_field_wrong_test tester --iface TESTINGUI_SET_DEFINED_FIELD_WRONG)
+    
+    add_library (set_undefined_field_right SHARED set_undefined_field_right.cpp)
+    add_test (set_undefined_field_right_test tester --iface TESTINGUI_SET_UNDEFINED_FIELD_RIGHT)
 endif (WITH_TESTS_CORE)
