--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -21,4 +21,8 @@ if (WITH_TESTS_CORE)
     
     add_library (set_undefined_field_right SHARED set_undefined_field_right.cpp)
     add_test (set_undefined_field_right_test tester --iface TESTINGUI_SET_UNDEFINED_FIELD_RIGHT)
+
+    add_library (set_undefined_field_wrong SHARED set_undefined_field_wrong.cpp)
+    add_test (set_undefined_field_wrong_test tester --iface TESTINGUI_SET_UNDEFINED_FIELD_WRONG)
+
 endif (WITH_TESTS_CORE)
